--- a/views/index.ejs
+++ b/views/index.ejs
@@ -374,8 +374,8 @@
                 <h3 class="my-3">Opakovací kartičky</h3>
                 <p class="text-muted mb-4">
                   Opakovací kartičky jsou jednou z nejefektivnějších studijních
-                  pomůcek. Palcem můžeš označit kartičky, které již umíš, a poté
-                  se vrátit jen k těm, které ještě potřebuješ procvičit.
+                  pomůcek. Můžeš označit kartičky, které již umíš, a poté se
+                  vrátit jen k těm, které ještě potřebuješ procvičit.
                 </p>
                 <% if (!generatedSectionId || !generatedCategoryId) { %>
                 <a
@@ -632,6 +632,14 @@
           ></button>
         </div>
         <div class="modal-body m-2 mt-0 pt-0">
+          <div class="d-flex justify-content-center mb-3">
+            <img
+              src="/img/icon_ai_brain.png"
+              class="mb-2 mt-3 img-fluid"
+              alt=""
+              style="height: 72px"
+            />
+          </div>
           <h5 class="modal-title text-center" id="generate-modal-headline">
             Vygenerovat obsah pomocí AI
           </h5>
