--- a/views/questions/show.ejs
+++ b/views/questions/show.ejs
@@ -236,6 +236,9 @@
                       <div></div>
                       <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                   </div>
+                  <div class="d-flex justify-content-center">
+                    <img src="/img/icon_bonus.png" class="img-fit" style="max-width: 100px;" alt="bonus-icon">
+                  </div>
                     <h3 class="text-center mt-3 mb-4">Získáváš bonus 100 AI kreditů</h3>
                   <div class="mt-4 text-center">
                     <p>Pokud nyní splníš svůj <b>denní cíl</b> deset dnů v řadě, připíšeme ti <b>dalších 500 AI kreditů</b>.</p>
