--- a/views/category.ejs
+++ b/views/category.ejs
@@ -1035,6 +1035,14 @@ category.sections.forEach(section => { %>
             data-bs-dismiss="modal"
           ></button>
         </div>
+        <div class="d-flex justify-content-center">
+          <img
+            src="/img/icon_bonus.png"
+            class="img-fit"
+            style="max-width: 100px"
+            alt="bonus-icon"
+          />
+        </div>
         <h3 class="text-center mt-3 mb-4">Získáváš bonus 500 AI kreditů</h3>
         <div class="mt-4 text-center">
           <p>
