--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -67,6 +67,9 @@
                 </li>-->
         <% if (currentUser) { %>
         <li class="nav-item">
+          <a class="nav-link" href="/credits">Přidat kredity</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/">Mé studium</a>
         </li>
         <li class="nav-item">
