--- a/views/questions/new.ejs
+++ b/views/questions/new.ejs
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-            <h2 class="text-center">Vytvořit novou testovou otázku</h2>
+            <h2 class="text-center">Vytvořit otázku</h2>
             <% if (sourceCardData) { %>
              <p class="text-center">ke kartičce</p>
             <% } else { %>
