--- a/views/home.ejs
+++ b/views/home.ejs
@@ -380,7 +380,7 @@
                     <div class="form-group mb-4 border-grey">
                         <div class="row p-2 icon-select-container">
                         <% icons.forEach(function(icon, index) { %>
-                            <div class="col-md-3 icon-container">
+                            <div class="col-md-3 icon-container d-flex justify-content-center align-items-center">
                               <label>
                                 <input type="radio" name="icon" value="<%= icon %>">
                                 <img src="/img/<%= icon %>" alt="Icon <%= index + 1 %>" class="img-thumbnail">
