--- a/views/categories/categories.ejs
+++ b/views/categories/categories.ejs
@@ -112,7 +112,7 @@
                 <div class="form-group mb-4 border-grey">
                     <div class="row p-2 icon-select-container">
                     <% icons.forEach(function(icon, index) { %>
-                        <div class="col-md-3 icon-container">
+                        <div class="col-md-3 icon-container d-flex justify-content-center align-items-center">
                           <label>
                             <input type="radio" name="icon" value="<%= icon %>">
                             <img src="/img/<%= icon %>" alt="Icon <%= index + 1 %>" class="img-thumbnail">
@@ -147,7 +147,7 @@
                     <div class="form-group mb-4 border-grey">
                         <div class="row p-2 icon-select-container">
                         <% icons.forEach(function(icon, index) { %>
-                            <div class="col-md-3 icon-container">
+                            <div class="col-md-3 icon-container d-flex justify-content-center align-items-center">
                               <label>
                                 <% if(icon === category.icon){ %>
                                     <input type="radio" name="icon" value="<%= icon %>" checked>
