--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
   <div class="container">
     <a class="navbar-brand fs-4 p-0" href="/"
-      ><img src="/favicon.ico" alt="" width="30" height="30" /> <%=
+      ><img src="/icon.png" alt="" width="30" height="30" /> <%=
       texts.general.projectName %></a
     >
     <button
