--- a/views/index.ejs
+++ b/views/index.ejs
@@ -366,7 +366,7 @@
           <div class="row">
             <div class="col-lg-6 mb-3">
               <div>
-                <img src="/img/mock_cards.png" alt="" class="img-fit-100" />
+                <img src="/img/mock_card.png" alt="" class="img-fit-100" />
               </div>
             </div>
             <div class="col-lg-6 mb-3">
@@ -417,7 +417,7 @@
             </div>
             <div class="col-lg-6 mb-3">
               <div>
-                <img src="/img/mock_questions.png" alt="" class="img-fit-100" />
+                <img src="/img/mock_question.png" alt="" class="img-fit-100" />
               </div>
             </div>
             <div class="col-lg-6 mb-3">
