--- a/views/questions/reachedLimit.ejs
+++ b/views/questions/reachedLimit.ejs
@@ -1,30 +1,39 @@
-<% layout ('layouts/boilerplate.ejs')  %> 
+<% layout ('layouts/boilerplate.ejs') %>
 <div class="container">
-    <div class="row">
-        <div class="col-lg-6 col-12 offset-lg-3">
-            <div class="card text-center p-4">
-                <div class="row">
-                    <div class="col-12 mt-4">
-                        <i class="fas fa-crown golden" style="font-size: 5rem;"></i>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 mt-4 mb-2">
-                        <h3>Získej neomezený přístup k testovým otázkám</h3>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 mt-2 mb-2">
-                        <p>Pro tento měsíc jsi vyčerpal/a svých 50 testových otázek dostupných zdarma.</p>
-                        <p>Aktivuj si předplatné Premium <b>s neomezeným počtem otázek</b> nebo počkej do prvního dne následujícího měsíce na dalších 50 otázek zdarma.</p>
-                    </div>
-                </div>
-                <div class="row mb-3 mt-3">
-                    <div class="col-12">
-                        <a href="/premium" class="btn btn-lg btn-warning">Chci studovat bez omezení</a>
-                    </div>
-                </div>
-            </div>
+  <div class="row">
+    <div class="col-lg-6 col-12 offset-lg-3">
+      <div class="card text-center p-4">
+        <div class="row">
+          <div class="col-12 mt-4">
+            <i class="fas fa-crown golden" style="font-size: 5rem"></i>
+          </div>
         </div>
+        <div class="row">
+          <div class="col-12 mt-4 mb-2">
+            <h3>Získej neomezený přístup k testovým otázkám</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 mt-2 mb-2">
+            <p>
+              Pro tento měsíc jsi vyčerpal/a svých 100 testových otázek
+              dostupných zdarma.
+            </p>
+            <p>
+              Aktivuj si předplatné Premium
+              <b>s neomezeným počtem otázek</b> nebo počkej do prvního dne
+              následujícího měsíce na dalších 100 otázek zdarma.
+            </p>
+          </div>
+        </div>
+        <div class="row mb-3 mt-3">
+          <div class="col-12">
+            <a href="/premium" class="btn btn-lg btn-warning"
+              >Chci studovat bez omezení</a
+            >
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
