topic based generation logic

--- a/views/category.ejs
+++ b/views/category.ejs
@@ -993,11 +993,7 @@ category.sections.forEach(section => { %>
           >
         </div>
         <div>
-          <img
-            src="/img/inlege_app_mock.png"
-            alt="Edookio App"
-            class="img-fluid"
-          />
+          <img src="/img/mock_app.png" alt="Edookio App" class="img-fluid" />
         </div>
       </div>
     </div>
