--- a/views/admin/jobs.ejs
+++ b/views/admin/jobs.ejs
@@ -49,8 +49,9 @@
         <div class="col-2">
             <span><%= job.name || "neuvedeno" %></span>
         </div>
-        <div class="col-1 d-flex justify-content-center">
+        <div class="col-1 d-flex flex-column justify-content-center">
           <span><%= job.source %></span>
+          <span class="text-muted"><%= job.jobType %></span>
         </div>
         <div class="col-1 d-flex justify-content-center">
             <span><%= job.extractedTextLength %></span>
