--- a/views/category.ejs
+++ b/views/category.ejs
@@ -480,7 +480,37 @@
           data-bs-dismiss="modal"
         ></button>
       </div>
-      <div class="modal-body m-2 pt-0">
+      <div class="modal-body m-2 pt-0" id="body-generate-btns">
+        <div id="document-formats-container">
+          <div
+            class="d-flex flex-column justify-content-center align-items-center"
+          >
+            <div class="d-flex flex-column">
+              <div class="d-flex justify-content-center mb-4">
+                <img
+                  src="/img/icon_ai_brain.png"
+                  class="mb-2 mt-3 img-fluid"
+                  alt=""
+                  style="height: 72px"
+                />
+              </div>
+              <a
+                href="#"
+                class="btn btn-danger mz-3"
+                id="show-body-generate-document"
+                >generovat z dokumentu</a
+              >
+              <a
+                href="#"
+                class="btn btn-danger my-3"
+                id="show-body-generate-topic"
+                >generovat zvolením tématu</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-body m-2 pt-0" id="body-generate" style="display: none">
         <div id="document-formats-container">
           <p class="text-muted text-smaller mb-1">
             Nahrajte soubor ve formátu .docx, .pdf nebo .pptx.
@@ -606,6 +636,41 @@
             <div class="col-12 d-flex justify-content-center mt-3">
               <button class="btn btn-danger w-100" id="add-section-with-ai-btn">
                 Vygenerovat balíček z dokumentu
+              </button>
+            </div>
+          </div>
+        </form>
+        <form
+          action="/category/<%= category._id  %>/newSectionFromTopic"
+          id="add-section-with-ai-form-topic"
+          method="POST"
+          style="display: none"
+        >
+          <div class="form-group row mt-3">
+            <label for="name" class="col-lg-4 col-form-label">Název</label>
+            <div class="col-lg-8">
+              <input
+                type="text"
+                class="form-control form-borders"
+                id="name"
+                name="name"
+                required
+              />
+            </div>
+          </div>
+          <div class="form-group row mt-2">
+            <label for="topic" class="col-lg-4 col-form-label">Téma</label>
+            <div class="col-lg-8">
+              <input type="text" class="form-control form-borders" id="topic" />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 d-flex justify-content-center mt-3">
+              <button
+                class="btn btn-danger w-100"
+                id="add-section-with-ai-btn-topic"
+              >
+                Vygenerovat balíček z tématu
               </button>
             </div>
           </div>
