--- a/views/category.ejs
+++ b/views/category.ejs
@@ -481,7 +481,7 @@
         ></button>
       </div>
       <div class="modal-body m-2 pt-0" id="body-generate-btns">
-        <div id="document-formats-container">
+        <div>
           <div
             class="d-flex flex-column justify-content-center align-items-center"
           >
@@ -498,35 +498,35 @@
                 href="#"
                 class="btn btn-danger mz-3"
                 id="show-body-generate-document"
-                >generovat z dokumentu</a
+                >Generovat z dokumentu</a
               >
               <a
                 href="#"
                 class="btn btn-danger my-3"
                 id="show-body-generate-topic"
-                >generovat zvolením tématu</a
+                >Generovat zvolením tématu</a
               >
             </div>
           </div>
         </div>
       </div>
       <div class="modal-body m-2 pt-0" id="body-generate" style="display: none">
-        <div id="document-formats-container">
-          <p class="text-muted text-smaller mb-1">
-            Nahrajte soubor ve formátu .docx, .pdf nebo .pptx.
-          </p>
-          <p class="text-muted text-smaller mb-3">
-            Máte k dispozici
-            <b><%= currentUser.credits + currentUser.extraCredits %></b>
-            kreditů.
-          </p>
-        </div>
         <form
           action="/category/<%= category._id  %>/newSectionFromDocument"
           id="add-section-with-ai-form"
           method="POST"
           enctype="multipart/form-data"
         >
+          <div id="document-formats-container">
+            <p class="text-muted text-smaller mb-1">
+              Nahrajte soubor ve formátu .docx, .pdf nebo .pptx.
+            </p>
+            <p class="text-muted text-smaller mb-3">
+              Máš k dispozici
+              <b><%= currentUser.credits + currentUser.extraCredits %></b>
+              kreditů (<a href="/credits">přidat kredity</a>).
+            </p>
+          </div>
           <div class="form-group row">
             <label for="name" class="col-lg-4 col-form-label">Název</label>
             <div class="col-lg-8">
@@ -634,7 +634,7 @@
           </div>
           <div class="row">
             <div class="col-12 d-flex justify-content-center mt-3">
-              <button class="btn btn-danger w-100" id="add-section-with-ai-btn">
+              <button class="btn btn-danger" id="add-section-with-ai-btn">
                 Vygenerovat balíček z dokumentu
               </button>
             </div>
@@ -646,30 +646,32 @@
           method="POST"
           style="display: none"
         >
-          <div class="form-group row mt-3">
-            <label for="name" class="col-lg-4 col-form-label">Název</label>
-            <div class="col-lg-8">
+          <div>
+            <p class="text-muted text-smaller mb-3">
+              Máš k dispozici
+              <b><%= currentUser.credits + currentUser.extraCredits %></b>
+              kreditů (<a href="/credits">přidat kredity</a>).
+            </p>
+          </div>
+          <div class="form-group row mt-2">
+            <div class="col-lg-8 d-flex w-100">
               <input
                 type="text"
-                class="form-control form-borders"
-                id="name"
-                name="name"
-                required
+                class="form-control form-borders text-center w-100 mb-3 mt-3"
+                style="font-size: 1.5rem"
+                placeholder="zvolte téma"
+                id="topic"
+                name="topic"
+                maxlength="64"
               />
             </div>
           </div>
-          <div class="form-group row mt-2">
-            <label for="topic" class="col-lg-4 col-form-label">Téma</label>
-            <div class="col-lg-8">
-              <input type="text" class="form-control form-borders" id="topic" />
-            </div>
-          </div>
+          <p class="text-muted text-small text-center">
+            např. "Václav Havel", "průmyslová revoluce" nebo "kvantová fyzika"
+          </p>
           <div class="row">
             <div class="col-12 d-flex justify-content-center mt-3">
-              <button
-                class="btn btn-danger w-100"
-                id="add-section-with-ai-btn-topic"
-              >
+              <button class="btn btn-danger" id="add-section-with-ai-btn-topic">
                 Vygenerovat balíček z tématu
               </button>
             </div>
@@ -831,14 +833,16 @@
           method="POST"
         >
           <div class="form-group row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 w-100">
               <input
                 type="text"
-                class="form-control form-borders"
                 id="name"
-                placeholder="Název"
+                placeholder="Název balíčku"
                 name="name"
                 required
+                class="form-control form-borders text-center w-100 mb-3"
+                style="font-size: 1.5rem"
+                maxlength="64"
               />
             </div>
           </div>
