--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -461,7 +461,7 @@ form .form-borders.border-darkgrey {
 
 .reason-title {
   border-bottom: 2px solid #ff0037;
-  display: inline;
+  display: inline-block;
   padding-bottom: 3px;
 }
 
