edookio.cz removed

--- a/views/legal/contact.ejs
+++ b/views/legal/contact.ejs
@@ -19,17 +19,12 @@
               </div>
               <hr />
               <div class="col-4 fw-bold">
-                <p>Instagram</p>
-              </div>
-              <div class="col-8">
-                <p><a href="https://www.instagram.com/edookio">@Edookio</a></p>
-              </div>
-              <hr />
-              <div class="col-4 fw-bold">
                 <p>E-mail</p>
               </div>
               <div class="col-8">
-                <p><a href="mailto:ondrej@edookio.cz">ondrej@edookio.cz</a></p>
+                <p>
+                  <a href="mailto:edookio@edookio.com">edookio@edookio.com</a>
+                </p>
               </div>
               <hr />
               <div class="col-4 fw-bold">
