--- a/views/legal/feedback.ejs
+++ b/views/legal/feedback.ejs
@@ -10,7 +10,7 @@
               Edookio je projekt, na kterém stále pracujeme. Budeme rádi za tvé
               připomínky a nápady na zlepšení. Využij prosím formulář níže nebo
               nám napiš na e-mail
-              <a href="mailto: edookio@edookio.cz">edookio@edookio.cz</a>.
+              <a href="mailto: edookio@edookio.com">edookio@edookio.com</a>.
             </p>
           </div>
         </div>
