--- a/views/legal/vop.ejs
+++ b/views/legal/vop.ejs
@@ -515,7 +515,7 @@
       <div class="col-11">
         <p>
           Uživatel je oprávněn uplatnit vady služeb u poskytovatele
-          prostřednictvím e-mailové adresy edookio@edookio.cz, a to bez
+          prostřednictvím e-mailové adresy edookio@edookio.com, a to bez
           zbytečného odkladu poté, co vadu zjistil, nejpozději však do jednoho
           měsíce od vzniku vady. V reklamaci je uživatel povinen přesně
           specifikovat, v čem vada spočívá nebo jak se projevuje.
@@ -797,7 +797,7 @@
       <div class="col-11">
         <p>
           Uživatel doručuje poskytovateli korespondenci na e-mailovou adresu
-          edookio@edookio.cz. Poskytovatel doručuje uživateli korespondenci na
+          edookio@com. Poskytovatel doručuje uživateli korespondenci na
           e-mailovou adresu uvedenou v jeho uživatelském účtu.
         </p>
       </div>
