gtp-4o-mini for free

--- a/views/admin/jobs.ejs
+++ b/views/admin/jobs.ejs
@@ -52,6 +52,7 @@
         <div class="col-1 d-flex flex-column justify-content-center">
           <span><%= job.source %></span>
           <span class="text-muted"><%= job.jobType %></span>
+          <span class="text-muted"><%= job.model %></span>
         </div>
         <div class="col-1 d-flex justify-content-center">
             <span><%= job.extractedTextLength %></span>
