--- a/views/credits.ejs
+++ b/views/credits.ejs
@@ -177,7 +177,7 @@
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
                               <div class="accordion-body">
-                                <p>Kredity jsou nutné pro udržitelnost Edookia, protože za data zpracovaná umělou inteligencí platíme společnosti OpenAI, používáme totiž její nejnovější model <strong>gpt-4o</strong>.</p>
+                                <p>Kredity jsou nutné pro udržitelnost Edookia, protože za data zpracovaná umělou inteligencí platíme společnosti OpenAI, používáme totiž její nejnovější modely <strong>gpt-4o</strong> a gpt-4o-mini.</p>
                               </div>
                             </div>
                           </div>
