--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -130,7 +130,7 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            generování AI modelem gpt-4
+                                            generování AI modelem gpt-4o-mini
                                         </div>
                                     </div>
                                 </li>
@@ -250,7 +250,7 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            generování AI modelem gpt-4
+                                            generování AI modelem gpt-4o
                                         </div>
                                     </div>
                                 </li>
@@ -370,7 +370,7 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            generování AI modelem gpt-4
+                                            generování AI modelem gpt-4o
                                         </div>
                                     </div>
                                 </li>
@@ -507,10 +507,10 @@
                       </tr>
 
                       <tr>
-                        <th scope="row">Generování pomocí gpt-4 od OpenAI</th>
-                        <td><i class="fas fa-check text-success"></i></td>
-                        <td><i class="fas fa-check text-success"></i></td>
-                        <td><i class="fas fa-check text-success"></i></td>
+                        <th scope="row">AI model</th>
+                        <td>gpt-4o-mini</td>
+                        <td>gpt-4o</td>
+                        <td>gpt-4o</td>
                       </tr>
 
                       <tr>
@@ -564,7 +564,7 @@
                           <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                               <p><strong>AI kredity</strong> jsou naše <strong>virtuální měna</strong>, kterou můžeš využít k tvorbě obsahu s využitím umělé inteligence. <strong>Jeden kredit</strong> odpovídá jedné kartičce a otázce (vždy jsou vytvářeny společně, cena je tedy 0,5 kreditu "za kus"). Každý měsíc dostaneš určitý počet kreditů, které můžeš využít k tvorbě nových otázek. Pokud by ti kredity nestačily, můžeš si je dokoupit. Ze zkušenosti víme, že <strong>1 000 kreditů</strong> je <strong>optimální měsíční množství</strong> pro pravidelné vytváření obsahu.</p>
-                              <p>Kredity jsou nutné pro udržitelnost Edookia, protože za data zpracovaná umělou inteligencí platíme společnosti OpenAI, používáme totiž její nejnovější model <strong>gpt-4</strong>.</p>
+                              <p>Kredity jsou nutné pro udržitelnost Edookia, protože za data zpracovaná umělou inteligencí platíme společnosti OpenAI, používáme totiž její nejnovější modely <strong>gpt-4o</strong> a gpt-4o-mini.</p>
                             </div>
                           </div>
                         </div>
