--- a/views/category.ejs
+++ b/views/category.ejs
@@ -557,7 +557,7 @@
                   class="scale-input"
                   name="cardsPerPage"
                   min="1"
-                  max="8"
+                  max="7"
                   step="1"
                   value="4"
                 />
@@ -569,7 +569,6 @@
                   <span>5</span>
                   <span>6</span>
                   <span>7</span>
-                  <span>8</span>
                 </div>
               </div>
             </div>
@@ -687,6 +686,14 @@
             />
           </div>
           <h5 class="mt-3 text-center mb-2">Generuji kartičky a otázky...</h5>
+          <% if (currentUser && currentUser.isPremium ){ %>
+          <p class="text-center text-smaller">gpt-4o</p>
+          <% } else { %>
+          <p class="text-center text-smaller">
+            gpt-4o-mini |
+            <a href="/premium" target="_blank">přejít na gpt-4o</a>
+          </p>
+          <% } %>
           <p
             class="text-muted text-center mb-2 text-smaller"
             id="expected-time"
