4o-mini always for free

--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -512,14 +512,12 @@
                         <td>gpt-4o</td>
                         <td>gpt-4o</td>
                       </tr>
-                      <!--
                       <tr>
                         <th scope="row">Extra 300 AI kreditů do začátku</th>
                         <td><i class="fas fa-check text-success"></i></td>
                         <td><i class="fas fa-check text-success"></i></td>
                         <td><i class="fas fa-check text-success"></i></td>
                       </tr>
-                      -->
                       <tr>
                         <th scope="row">Možnost dokoupení kreditů</th>
                         <td><i class="fas fa-check text-success"></i></td>
@@ -588,7 +586,7 @@
                           </h2>
                           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                              <strong>Ano.</strong> V případě ukončení předplatného zůstane Premium <strong>aktivní do konce obdobní</strong> (měsíc nebo rok). Po skončení období se automaticky přepneš na bezplatnou verzi aplikace. <strong>Přístup</strong> k vytvořenému obsahu <strong>zůstane zachován</strong> v mezích balíčku Free (neomezeně ke kartičkám, 100 testových otázek / měsíc).
+                              <strong>Ano.</strong> V případě ukončení předplatného zůstane Premium <strong>aktivní do konce období</strong> (měsíc nebo rok). Po skončení období se automaticky přepneš na bezplatnou verzi aplikace. <strong>Přístup</strong> k vytvořenému obsahu <strong>zůstane zachován</strong> v mezích balíčku Free (neomezeně ke kartičkám, 100 testových otázek / měsíc).
                             </div>
                           </div>
                         </div>
