--- a/views/category.ejs
+++ b/views/category.ejs
@@ -686,12 +686,7 @@
             />
           </div>
           <h5 class="mt-3 text-center mb-2">Generuji kartičky a otázky...</h5>
-          <% if (currentUser && !currentUser.isPremium &&
-          currentUser.generatedCardsCounterTotal < 101 ){ %>
-          <p class="text-center text-smaller">
-            používám <b>gpt-4o</b> pro prvních 100 kartiček a otázek
-          </p>
-          <% } else if (currentUser && currentUser.isPremium) { %>
+          <% if (currentUser && currentUser.isPremium) { %>
           <p class="text-center text-smaller">používám <b>gpt-4o</b></p>
           <% } else { %>
           <p class="text-center text-smaller">
