--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,7 +14,7 @@
       </div>
       <div class="d-flex flex-row justify-content-between">
         <div class="mx-2 d-flex justify-content-center align-items-center">
-          <a href="https://www.instagram.com/edookio" target="_blank" class=""
+          <a href="https://www.instagram.com/edookioai" target="_blank" class=""
             ><img src="/img/icon_instagram.png" class="ig-icon" alt=""
           /></a>
         </div>
