--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -1,81 +1,109 @@
-<% layout ('layouts/boilerplate.ejs')  %> 
+<% layout ('layouts/boilerplate.ejs') %>
 <div class="container">
-    <div class="row">
-        <div class="col-12 mb-3">
-            <h5>Registrovaní uživatelé <span class="text-muted">(<%= users.length %>)</span> | <a href="/admin/activeSubscriptions">Aktivní předplatitelé</a></h5>
-            <span class="text-smaller">Řazení: <a href="/admin/users?order=basic">Základní</a> | <a href="/admin/users?order=cards">Kartičky</a> | <a href="/admin/users?order=questions">Otázky</a> | <a href="/admin/users?order=streak">Streak</a></span>
-        </div>
+  <div class="row">
+    <div class="col-12 mb-3">
+      <h5>
+        Registrovaní uživatelé
+        <span class="text-muted">(<%= users.length %>)</span> |
+        <a href="/admin/activeSubscriptions">Aktivní předplatitelé</a>
+      </h5>
+      <span class="text-smaller"
+        >Řazení: <a href="/admin/users?order=basic">Základní</a> |
+        <a href="/admin/users?order=cards">Kartičky</a> |
+        <a href="/admin/users?order=questions">Otázky</a> |
+        <a href="/admin/users?order=streak">Streak</a></span
+      >
     </div>
-    <% users.forEach((user, i) => { %> 
-        <div class="row text-smaller">
-            <div class="col-sm-1 col-1 d-flex justify-content-between align-items-start">
-                <p><%= users.length - i %></p>
-            </div>
-            <div class="col-sm-2 col-7 d-flex justify-content-between align-items-start">
-                <p class="mb-0 text-bold"><%= user.email %></p>
-                <% if (user.activeInLast48Hours) { %>
-                    <span style="color:green"><b>A</b></span>
-                <% } %> 
-            </div>
-            <div class="col-sm-1 col-4">
-                <div><%= user.source %></div>
-            </div>
-            <div class="col-sm-2 col-7">
-                <div>
-                    R: <%= user.updatedDateOfRegistration %> |
-                    SC: <%= user.savedCards.length %>
-                </div>
-                <div>
-                    <div>LA: <%= user.updatedLastActive %></div>
-                </div>
-            </div>
-            <div class="col-sm-1 col-1">
-                <%= user.cardsSeen %> | <%= user.questionsSeenTotal %> | <%= user.streakLength %>
-            </div>
-            <% if(user.isPremium){ %> 
-                <div class="col-sm-1 col-4">Premium <% if(user.premiumGrantedByAdmin){ %>(A) <% } %></div>
-            <% } else { %>
-                <div class="col-sm-1 col-5" >-</div>
-            <% } %>
-            <% if (user.isPremium && !user.premiumGrantedByAdmin && user.plan !== "none") { %>
-                <div class="col-sm-4 col-12">
-                    <div class="d-flex justify-content-between align-items-center my-2 my-sm-0">
-                        <div class="col-sm-1 d-flex justify-content-center align-items-center">
-                            <a href="/admin/<%=user._id%>/showDetail" class="btn btn-sm btn-danger">Detail</a>
-                        </div>
-                        <div class="d-flex">
-                            <% if (user.usedMobileApp) { %>
-                                <p class="mb-1 mx-1" style="color:blue;font: bold;">
-                                    APP
-                                    <% if (user.appNotificationsAllowed) { %>
-                                     (notifikace)
-                                    <% } %>
-                                </p>
-                               <% } %>
-                            <p class="mb-0 mx-1"><%= user.registrationPlatform %></p>
-                            <p class="text-muted mb-0"><span style="color: green;font-weight: bold;">- A -</span></p>
-                        </div>
-                    </div>
-                </div>
-            <% } else { %>
-                <div class="col-sm-4 col-12">
-                    <div class="d-flex justify-content-between align-items-center my-2 my-sm-0">
-                        <div class="col-sm-1 d-flex justify-content-center align-items-center">
-                            <a href="/admin/<%=user._id%>/showDetail" class="btn btn-sm btn-danger">Detail</a>
-                        </div>
-                        <div class="d-flex">
-                            <% if (user.usedMobileApp) { %>
-                                <p class="mb-1 mx-1" style="color:blue;font: bold;">APP <% if (user.appNotificationsAllowed) { %>
-                                    (notifikace)
-                                   <% } %></p>
-                               <% } %>
-                            <p class="mb-0 mx-1"><%= user.registrationPlatform %></p>
-                            <p class="text-muted mb-0">- N -</p>
-                        </div>
-                    </div>
-                </div>
-            <% } %>
-            <hr>
+  </div>
+  <% users.forEach((user, i) => { %>
+  <div class="row text-smaller">
+    <div
+      class="col-sm-1 col-1 d-flex justify-content-between align-items-start"
+    >
+      <p><%= users.length - i %></p>
+    </div>
+    <div
+      class="col-sm-2 col-7 d-flex justify-content-between align-items-start"
+    >
+      <p class="mb-0 text-bold"><%= user.email %></p>
+      <% if (user.activeInLast48Hours) { %>
+      <span style="color: green"><b>A</b></span>
+      <% } %>
+    </div>
+    <div class="col-sm-1 col-4">
+      <div><%= user.source %></div>
+      <div><%= user.registrationCampaign %></div>
+    </div>
+    <div class="col-sm-2 col-7">
+      <div>
+        R: <%= user.updatedDateOfRegistration %> | SC: <%=
+        user.savedCards.length %>
+      </div>
+      <div>
+        <div>LA: <%= user.updatedLastActive %></div>
+      </div>
+    </div>
+    <div class="col-sm-1 col-1">
+      <%= user.cardsSeen %> | <%= user.questionsSeenTotal %> | <%=
+      user.streakLength %>
+    </div>
+    <% if(user.isPremium){ %>
+    <div class="col-sm-1 col-4">
+      Premium <% if(user.premiumGrantedByAdmin){ %>(A) <% } %>
+    </div>
+    <% } else { %>
+    <div class="col-sm-1 col-5">-</div>
+    <% } %> <% if (user.isPremium && !user.premiumGrantedByAdmin && user.plan
+    !== "none") { %>
+    <div class="col-sm-4 col-12">
+      <div
+        class="d-flex justify-content-between align-items-center my-2 my-sm-0"
+      >
+        <div class="col-sm-1 d-flex justify-content-center align-items-center">
+          <a
+            href="/admin/<%=user._id%>/showDetail"
+            class="btn btn-sm btn-danger"
+            >Detail</a
+          >
         </div>
-    <% }) %> 
+        <div class="d-flex">
+          <% if (user.usedMobileApp) { %>
+          <p class="mb-1 mx-1" style="color: blue; font: bold">
+            APP <% if (user.appNotificationsAllowed) { %> (notifikace) <% } %>
+          </p>
+          <% } %>
+          <p class="mb-0 mx-1"><%= user.registrationPlatform %></p>
+          <p class="text-muted mb-0">
+            <span style="color: green; font-weight: bold">- A -</span>
+          </p>
+        </div>
+      </div>
+    </div>
+    <% } else { %>
+    <div class="col-sm-4 col-12">
+      <div
+        class="d-flex justify-content-between align-items-center my-2 my-sm-0"
+      >
+        <div class="col-sm-1 d-flex justify-content-center align-items-center">
+          <a
+            href="/admin/<%=user._id%>/showDetail"
+            class="btn btn-sm btn-danger"
+            >Detail</a
+          >
+        </div>
+        <div class="d-flex">
+          <% if (user.usedMobileApp) { %>
+          <p class="mb-1 mx-1" style="color: blue; font: bold">
+            APP <% if (user.appNotificationsAllowed) { %> (notifikace) <% } %>
+          </p>
+          <% } %>
+          <p class="mb-0 mx-1"><%= user.registrationPlatform %></p>
+          <p class="text-muted mb-0">- N -</p>
+        </div>
+      </div>
+    </div>
+    <% } %>
+    <hr />
+  </div>
+  <% }) %>
 </div>
