--- a/views/admin/jobs.ejs
+++ b/views/admin/jobs.ejs
@@ -43,7 +43,7 @@
   <% jobEvents.forEach((job, i) => { %>
     <div class="row text-smaller">
         <div class="col-2 d-flex flex-column">
-            <span><%= job.user?.email || "demo" %></span>
+            <span><a href="/admin/<%= job.user?._id %>/showDetail"><%= job.user?.email || "demo" %></a></span>
             <span class="text-small text-muted"><%= job.dateFormatted %></span>
         </div>
         <div class="col-2">
