--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -73,7 +73,7 @@ body {
   background-color: white;
   min-height: 40%;
   min-width: 40%;
-  border-radius: 0.25rem;
+  border-radius: 18px;
   border: 1px solid #dfdfdf;
   padding: 1rem;
   padding-bottom: 0;
