--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -32,7 +32,8 @@
     </div>
     <div class="col-sm-1 col-4">
       <div><%= user.source %></div>
-      <div><%= user.registrationCampaign %></div>
+      <div class="text-muted"><%= user.registrationCampaign %></div>
+      <div class="text-muted">landing: <%= user.landingPageVariant %></div>
     </div>
     <div class="col-sm-2 col-7">
       <div>
