--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -3,10 +3,10 @@
     <div class="row">
         <div class="col-lg-4 offset-lg-1 d-flex justify-content-center">
         <div class="" style="max-width:400px;">
-            <div class="card height-100">
+            <div class="card height-100 d-flex align-items-center">
                 <div class="card-body p-4 px-5">
                 <div class="text-center">
-                    <h1 class="mb-3 mt-2">Vytvořit účet</h1>
+                    <h1 class="mb-3 mt-2 mt-xl-5">Vytvořit účet</h1>
                 </div>
                 <!--
                 <div class="text-center mt-3">
