animation on landing A

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -371,7 +371,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body mx-3">
-                <form action="/category/new" method="POST">
+                <form action="/category/new" method="POST" id="add-category-form">
                     <div class="form-group mb-4">
                         <label for="text">Název předmětu</label>
                         <input class="form-control form-borders" id="text" name="text" rows="1" placeholder="" required></input>
