--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -62,6 +62,9 @@
         <li class="nav-item">
           <a class="nav-link premium" href="/premium">Premium</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/blog">Blog</a>
+        </li>
         <!--<li class="nav-item">
                   <a class="nav-link" href="/about">O projektu</a>
                 </li>-->
